2004-04-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Don't bother building with GStreamer 0.7.x, and set a define
	stating which version of GStreamer we are using.

2004-04-14  Bastien Nocera  <hadess@hadess.net>

	* autogen.sh: make it build with automake 1.8
	* src/cd-drive.c: (linux_bsd_media_type): update from libbacon

2004-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Release 0.5.11.

2004-04-13  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer-manual-C.omf:
	Add the DTD.

2004-04-13  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/dvd_plus_rw_utils.cpp:
	Updated.

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Look for GStreamer 0.8 before trying 0.7 and 0.6.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a mnemonic to the "broken encoder" dialog, and fix the closing
	logic.
	
2004-03-29  Ross Burton  <ross@burtonini.com>

	* README:
	Updated, and added a FAQ.

2004-03-23  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in:  Added "uk" (Ukrainian) to ALL_LINGUAS

2003-03-21  Gareth Owen  <gowen72@yahoo.com>

	* configure.in:  Added en_GB to ALL_LINGUAS

2003-03-21  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
   
        * configure.in(ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).

2004-03-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Control-Return as the menu shortcut for Extract.

2004-03-12  Paisa Seeluangsawat  <paisa@users.sf.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-03-07  Tommi Vainikainen <thv@iki.fi>

	* configure.in: Added "fi" (Finnish) to ALL_LINGUAS.

2004-03-02  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" (Lithuanian) to ALL_LINGUAS.

2004-02-25  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c: