@@ -1,5 +1,10 @@
 2004-04-16  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.c:
+	Handle the new GStreamer 0.8 error callback prototype.
+
+2004-04-16  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	Don't bother building with GStreamer 0.7.x, and set a define
 	stating which version of GStreamer we are using.
